--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -14,3 +14,15 @@ main {
 h1 {
     font-size: 3rem;
 }
+
+
+.coffee-list {
+    display: flex;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+
+.coffee-list > h2 {
+    padding: 3.375rem;
+}
+
