--- a/src/global.css
+++ b/src/global.css
@@ -11,7 +11,7 @@ h1, h2, h3, h4 {
 }
 
 body {
-    background-color: #FAFAFA;
+    background-color: #FFFFFF;
     -webkit-font-smoothing: antialised;
 }
 
