--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,15 @@
 body {
-    padding: 0rem 2rem;
-    width: 80rem;
+    max-width: 80rem;
+    margin: 0rem auto;
+    padding: 2.5rem;
 
-    display: flex;
+
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
+
+
+
+
+
 }
