--- a/src/components/CoffeeOption/styles.css
+++ b/src/components/CoffeeOption/styles.css
@@ -7,7 +7,7 @@
 
     width: 16rem;
     padding: 0rem 1.25rem 1.25rem 1.25rem;
-    margin-top: 2.5rem;
+    /* margin-bottom: 2.5rem; */
 
 
     background-color: #F3F2F2;
@@ -23,30 +23,47 @@
 
 .tags {
     /* margin: 0rem 0.25rem;  */
+    /* display: flex; */
     margin-top: -1rem;
+    margin-bottom: 1rem;
+    gap: 0.25rem;
 
 }
 
 .tag {
     color: #C47F17;
-    background-color: #F1E9C9;
+    /* background-color: #F1E9C9; */
+    background-color: var(--yellow-light);
     font-size: 0.625rem;
+
     padding: 0.25rem 0.5rem;
+    margin: 2px;
+    
     border-radius: 100px;
     text-transform: uppercase;
+}
+
+h3 {
+    font-size: 1.25rem;
+    /* line-height: 0.5rem; */
+    margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 .option-card > p {
     font-size: 0.875rem;
     line-height: 1rem;
     align-items: center;
+    color: var(--base-label);
+
+    text-align: center;
 }
 
 .buy-section {
     display: flex; 
 
     align-items: center; 
-    justify-content: center;
+    /* justify-content: center; */
     gap: 0rem;
 
     margin-top: 2rem;
@@ -79,23 +96,27 @@
     font-size: 1rem;
 }
 
-.buy-section > button {
+.buy-section > .cart-button {
     display: flex;
 
     align-items: center;
     justify-content: center;
 
     padding: 0.4rem;
-    color: white;
     margin-left: 0.5rem;
-
+    
     background-color: #4B2995;
     border-radius: 6px;
-
+    
     /* width: 1.375rem;
     height: 1.375rem; */
-
+    
     border: none;
+}
+
+.cart-button-icon {
+    color: white;
+    
 }
 
 .qty-btns {
