--- a/src/components/Navbar/styles.css
+++ b/src/components/Navbar/styles.css
@@ -1,10 +1,48 @@
 nav {
     display: flex;
-    padding: 2rem;
+    /* padding: 1rem 0rem; */
+    height: 6.5rem;
+
+    align-items: center;
+    justify-content: space-between;
 }
 
-nav > img {
-    margin-right: auto;
+.logo {
+    /* margin-right: auto; */
     height: 2.5rem;
-    width: 5.25rem;
+    width: 5.3rem;
 }
+
+.actions {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+}
+
+.location-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.75rem;
+    height: 2.4rem;
+    gap: 0.25rem ;
+    
+    background-color: var(--purple-light);
+    color: var(--purple);
+    font-size: 0.875rem;
+    border-radius: 6px;
+}
+
+.cart-action {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5rem;
+    height: 2.4rem;
+    gap: 0.25rem ;
+    
+    
+    background-color: var(--yellow-light);
+    color: var(--yellow-dark);
+    border-radius: 6px;
+} 
