--- a/src/global.css
+++ b/src/global.css
@@ -3,16 +3,38 @@
     margin: 0;
     box-sizing: border-box;
 
+    --yellow-dark: #C47F17;
+    --yellow:#DBAC2C;
+    --yellow-light:#F1E9C9;
+    --purple-dark:#4B2995;
+    --purple:#8047F8;
+    --purple-light:#EBE5F9;
+
+    --base-title:#272221;
+    --base-subtitle:#403937;
+    --base-text:#574F4D;
+    --base-label:#8D8686;
+    --base-hover:#D7D5D5;
+    --base-button:#E6E5E5;
+    --base-input:#EDEDED;
+    --base-card:#F3F2F2;
+    --background:#FAFAFA;
+    --white: #FFFFFF;
+
 }
 
 h1, h2, h3, h4 {
     font-family: 'Baloo 2', cursive;
-    line-height: 3rem;
+    /* line-height: 3rem; */
 }
 
 body {
     background-color: #FFFFFF;
     -webkit-font-smoothing: antialised;
+    
+    /* background-image: url(src/assets/hero-background.svg); */
+    background-size: contain;
+    /* background-attachment: fixed; */
 }
 
 body, input, textarea, button {
@@ -21,4 +43,3 @@ body, input, textarea, button {
     font-size: 1.25rem;
     line-height: 1.6rem;
 }
-
