--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -6,23 +6,19 @@ main {
 }
 
 
-.hero {
-    display: flex;
-}
-
-
-h1 {
-    font-size: 3rem;
-}
 
 
 .coffee-list {
     display: flex;
-    gap: 2rem;
+    gap: 2.5rem;
+    justify-content: first baseline;
+    justify-content: space-evenly;
+    align-items: center;
+
     flex-wrap: wrap;
 }
 
-.coffee-list > h2 {
-    padding: 3.375rem;
+h2 {
+    padding: 2rem 0rem;
 }
 
