--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -1,10 +1,76 @@
-/* MAIN CONTENT: */
-
-.hero {
+.checkout-container {
     display: flex;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.block {
+    padding: 2.5rem;
+    margin-bottom: 0.75rem;
+
+    border-radius: 0.4rem;
+    background-color: var(--base-card);
 }
 
 
-h1 {
-    font-size: 3rem;
+.order-block {
+    width: 30rem;
+}
+
+
+
+
+
+
+
+/* FORM */
+
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+input {
+    align-items: center;
+    padding: 12px;
+    margin-left: 1rem;
+
+    color: var(--purple);
+    
+    border: 1px solid #E6E5E5;
+    border-radius: 4px;
+    background-color: var(--base-input);
+}
+
+
+
+
+/* ORDER */
+
+table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    padding: 1.5rem 0rem;
+
+
+}
+
+.confirm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    padding: 0.75rem 0.5rem;
+    
+    color: white;
+    background-color: var(--yellow);
+    border: none;
+    border-radius: 6px;
+
+    text-transform: uppercase;
+    font-size: 1rem;
 }
