--- a/src/components/CoffeeOption/styles.css
+++ b/src/components/CoffeeOption/styles.css
@@ -112,6 +112,7 @@ h3 {
     height: 1.375rem; */
     
     border: none;
+    cursor: pointer;
 }
 
 .cart-button-icon {
@@ -128,4 +129,6 @@ h3 {
 
     width: 0.5rem;
     height: 0.5rem; */
+
+    cursor: pointer;
 }
