--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -12,13 +12,24 @@
     background-color: var(--base-card);
 }
 
+.block-title {
+    font-size: 1rem;
+    color: var(--base-text);
+}
+
+.block-description {
+    font-size: 0.875rem;
+    color: var(--base-text);
+}
 
 .order-block {
     width: 30rem;
 }
 
 
-
+h3 {
+    text-align: left;
+}
 
 
 
@@ -29,12 +40,17 @@ form {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    padding: 2rem 0rem;
+}
+
+.input-line {
+    display: flex;
+    gap: 1rem;
 }
 
 input {
     align-items: center;
     padding: 12px;
-    margin-left: 1rem;
 
     color: var(--purple);
     
@@ -43,20 +59,56 @@ input {
     background-color: var(--base-input);
 }
 
+input[type="text"]
+{
+    font-size: 0.875rem;
+}
 
+
+.payment-methods {
+    display: flex;
+    gap: 0.75rem;
+    margin-top: 2rem;
+}
+
+.payment-option {
+    display: flex;
+    align-items: center;
+    gap: 0.75rem;
+
+    width: 100%;
+    padding: 1rem;
+
+    background-color: #E6E5E5;
+    border-radius: 6px;
+
+    font-size: 0.75rem;
+    text-transform: uppercase;
+}
 
 
 /* ORDER */
 
-table {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    
-    padding: 1.5rem 0rem;
-
-
+.summary {
+    padding-top: 1.625rem;
 }
+
+.summary-line {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.6rem;
+}
+
+.summary-line:nth-child(3) {
+    font-size: 1.25rem;
+    font-weight: 700;
+    line-height: 1.6rem;
+}
+
 
 .confirm {
     display: flex;
