--- a/src/components/CoffeeOption/styles.css
+++ b/src/components/CoffeeOption/styles.css
@@ -63,24 +63,30 @@ h3 {
     display: flex; 
 
     align-items: center; 
-    /* justify-content: center; */
-    gap: 0rem;
+    justify-content: space-between;
+    gap: 0.5rem;
 
     margin-top: 2rem;
 }
 
-.buy-section > h3 {
+.price {
     font-size: 1.5rem;
-    margin-right: 1.5rem;
+
+    font-family: 'Baloo 2', cursive;
+    font-weight: 700;
+    margin-right: auto;
+
+    color: var(--base-text);
+
 }
 
 .buy-section > h3 > span {
     font-size: 0.875rem;
     line-height: 1rem;
-    align-items: center;
+    /* align-items: center; */
 }
 
-.buy-section > .quantity {
+.qty-box {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -88,36 +94,31 @@ h3 {
     text-align: center;
 
     width: 4.5rem;
-    padding: 0.5rem 1rem;
-    gap: 0.25rem;
+    /* padding: 0.5rem 1rem; */
+    height: 2.5rem;
+    gap: 0.5rem;
     border-radius: 0.5rem;
     background-color: #E6E5E5;
-
+    
     font-size: 1rem;
 }
 
-.buy-section > .cart-button {
+.cart-button {
     display: flex;
-
+    
     align-items: center;
     justify-content: center;
-
-    padding: 0.4rem;
-    margin-left: 0.5rem;
     
+    /* padding: 0.5rem; */
+    height: 2.5rem;
+    width: 2.5rem;
+
+
     background-color: #4B2995;
     border-radius: 6px;
-    
-    /* width: 1.375rem;
-    height: 1.375rem; */
-    
+
     border: none;
     cursor: pointer;
-}
-
-.cart-button-icon {
-    color: white;
-    
 }
 
 .qty-btns {
