--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -65,6 +65,11 @@ input[type="text"]
 }
 
 
+.title-desc-icon-div {
+ display: flex;
+ gap: 0.5rem;
+}    
+
 .payment-methods {
     display: flex;
     gap: 0.75rem;
@@ -84,6 +89,11 @@ input[type="text"]
 
     font-size: 0.75rem;
     text-transform: uppercase;
+}
+
+.payment-option > p {
+    font-size: 0.75rem;
+    line-height: 1rem;
 }
 
 
