--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -4,26 +4,23 @@
     gap: 2rem;
 }
 
-.block {
-    padding: 2.5rem;
-    margin-bottom: 0.75rem;
 
-    border-radius: 0.4rem;
-    background-color: var(--base-card);
-}
-
-.block-title {
-    font-size: 1rem;
-    color: var(--base-text);
-}
-
-.block-description {
-    font-size: 0.875rem;
-    color: var(--base-text);
+.left-panel {
+    width: 800rem;
 }
 
 .order-block {
-    width: 30rem;
+    min-width: 28rem;
+    width: 15%;
+}
+
+.blank-order-block {
+    width: 15%;
+    min-width: 28rem;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 
@@ -36,35 +33,7 @@ h3 {
 
 /* FORM */
 
-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    padding: 2rem 0rem;
-}
-
-.input-line {
-    display: flex;
-    gap: 1rem;
-}
-
-input {
-    align-items: center;
-    padding: 12px;
-
-    color: var(--purple);
-    
-    border: 1px solid #E6E5E5;
-    border-radius: 4px;
-    background-color: var(--base-input);
-}
-
-input[type="text"]
-{
-    font-size: 0.875rem;
-}
-
-
+/* 
 .title-desc-icon-div {
  display: flex;
  gap: 0.5rem;
@@ -89,12 +58,23 @@ input[type="text"]
 
     font-size: 0.75rem;
     text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.15s;
+
+}
+
+.payment-option:hover {
+    background-color: var(--base-hover);
+}
+
+.payment-option:active {
+    background-color: var(--brand-purple);
 }
 
 .payment-option > p {
     font-size: 0.75rem;
     line-height: 1rem;
-}
+} */
 
 
 /* ORDER */
@@ -135,4 +115,15 @@ input[type="text"]
 
     text-transform: uppercase;
     font-size: 1rem;
+
+    cursor: pointer;
+    transition: 0.15s;
+}
+
+.confirm:hover {
+    background-color: var(--yellow-dark);
+}
+
+.link {
+    text-decoration: none;
 }
