--- a/src/pages/Checkout/styles.css
+++ b/src/pages/Checkout/styles.css
@@ -19,10 +19,15 @@
     min-width: 28rem;
     
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.back-home {
+    color: var(--yellow-dark);
+    font-size: 0.8rem;
+}
 
 h3 {
     text-align: left;
